<resources>
    <string name="app_name">TrucoApp</string>
    <string name="titulo_inicio">Anotador de Truco!</string>
    <string name="boton_inicio">Jugar</string>
    <string name="titulo_truco">Truco</string>
    <string name="mas">+</string>
    <string name="descripcion1">puntos11</string>
    <string name="titulo_equi1">Ellos</string>
    <string name="titulo_equi2">Nosotros</string>
    <string name="descripcion2">puntos12</string>
    <string name="descripcion3">puntos13</string>
    <string name="descripcion4">puntos21</string>
    <string name="descripcion5">puntos22</string>
    <string name="descripcion6">puntos23</string>
    <string name="boton_continuar">Continuar</string>
    <string name="titulo_jganado">Resultados Anteriores</string>
    <string name="jugar_again">Jugar de Nuevo</string>
    <string name="vacio" />
    <string name="cabeceraE">Ellos</string>
    <string name="cabeceraN">Nosotros</string>
</resources>
