<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JuegoGanado">

    <Button
        android:id="@+id/boton_jugaragain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:layout_marginBottom="50dp"
        android:text="@string/jugar_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titulo_jganado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        android:text="@string/titulo_jganado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="215dp"
        android:layout_height="306dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/boton_jugaragain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_jganado">

        <TableRow android:gravity="start|end">
            <TextView
                android:id="@+id/cabeceraEllos"
                android:padding="3dip"
                android:text="@string/cabeceraE" />

            <TextView
                android:id="@+id/cabeceraNosotros"
                android:gravity="start|end"
                android:padding="3dip"
                android:text="@string/cabeceraN" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/ellos1"
                android:layout_width="79dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/vacio" />

            <TextView
                android:id="@+id/nosotros1"
                android:layout_width="101dp"
                android:layout_height="match_parent"
                android:gravity="start|end"
                android:padding="3dip"
                android:text="@string/vacio" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/ellos2"
                android:padding="3dip"
                android:text="@string/vacio" />

            <TextView
                android:id="@+id/nosotros2"
                android:gravity="start|end"
                android:padding="3dip"
                android:text="@string/vacio" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>